g_string_append_len_inline: fix implicit conversion changes signedness

For: https://gitlab.gnome.org/GNOME/glib/-/issues/2919